@@ -1,3 +1,13 @@
+Fri Feb  4 00:14:55 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* ext/zlib/zlib.c (gzfile_reader_get_unused): no need to dup
+	  before rb_str_resurrect.
+
+Thu Feb  3 18:33:26 2011  NARUSE, Yui  <naruse@ruby-lang.org>
+
+	e ext/zlib/zlib.c (gzfile_reader_get_unused): use rb_str_resurrect
+	  because gz->z.input is hidden string. [ruby-core:35057]
+
 Thu Feb  3 07:02:16 2011  Aaron Patterson <aaron@tenderlovemaking.com>
 
 	* ext/psych/lib/psych/visitors/to_ruby.rb: ARG_ENCODING_NONE regular
